# AI-Agent-Hackathon

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CLAUDE-AVAILABLE-APIS.md  CREDENTIALS-CHECKLIST.md  Dockerfile  EXPLAINER-idea-and-plan.md  EXPLAINER-roles.md  GETTING-STARTED.md  LICENSE  MANIFEST.json  Makefile  README.md  ULTRACODE-DEMO-PROMPT.md  ULTRACODE-PROMPT.md  pyproject.toml  render.yaml  verify_pack.py
.claude/: launch.json
.github/workflows/: ci.yml
Hackathon Information/: HACKATHON-GUIDE.md  based-ai-announcement.txt  based-ai-general.txt  conduct-ai.txt  fetch-ai-general.txt  fetch-ai.txt
Idea/: Idea-Development.md
Idea/refinement/: 00-panel-verdicts.md  01-realistic-data-plan.md  02-architecture-refinement.md  03-pitch-deck.md  04-demo-and-video-script.md  05-scale-story-and-qa.md  06-session-working-notes.md  CONTEXT-deck-build-brief.md
Plan/: BUILD-PLAN.md  HUMAN-ACTION-ITEMS-GUIDE.md  HUMAN-ACTION-ITEMS-T1-T3.md  prep-spec.md
Plan/workflows/: N1-deck-build.md  N1-kb-articles.md  N1-licence-attribution.md  N1-rehearsal-runner.md  N2-video-edit.md  (+5 more)
Prep/: FINISH-RUNBOOK.md  final-numbers.md  glossary.md  industry-primer.md  qa-bank.md  rehearsal-gate-checklist.md  run-of-show.md  selection-branch-staging.md  tech-explainer.md
Prompts/: 01-ultracode-idea-refinement.md  02-ultracode-build-plan.md  03-ultracode-t1-completion.md  04-ultracode-t3-completion.md  05-ultracode-merge-checkpoint.md  06-ultracode-finish-remaining.md  07-ultracode-code-excellence.md  08-ultracode-video-production.md  README.md
Research/: 04-media-broadcast-ops-vertical.md  05-quantified-pain-and-trust-requirements.md  06-gaps-differentiation-and-positioning.md  README.md
agents/: README.md  __init__.py  approval.py  common.py  librarian.py  operator.py  protocol.py  rails.py  watcher.py
console/: __init__.py  app.py  demo_state.py  funnel.py  read_api.py  session.py  showcase.py
docs/: DEMO-BUILD-REPORT.md  DIRECTION.md  MUTATION-CORPUS-HANDOFF.md  PRODUCT-BUILD-REPORT.md  T2-DEMO-RUNBOOK.md  data-provenance.md  kb-integrity-report.md  number-honesty-audit.md  numbers.md  policy-action-class-schema.md  qa-bank.md  tech-explainer.md
gate/: README.md  __init__.py  api.py  models.py  service.py  world.py
precedent/: __init__.py  bm25.py  console_link.py  contracts.py  extractor.py  extractor_robustness.py  ladder.py  models.py  orchestrator.py  policy.py  policy_lint.py  policy_pack.yaml  policy_pack_actions.yaml  tools.py  venice.py
precedent_analyzer/: __init__.py  __main__.py  analyze.py  cli.py  mapping.py  report.py
precedent_memory/: __init__.py  audit.py  db.py  probing_detection.py  retrieve.py  schema.sql  store.py  sync.py
precedent_pack/: __init__.py  builder.py  template.html
scripts/: check_open_weight.sh  check_product_imports.sh  copy_lint.py  copy_lint_allowlist.txt  demo_reset.py  demo_server.py  docker_start.sh  drive_incident.py  dryrun_watcher_chat.py  jira_smoke.py  live_drift_ttc.py  precompute_embeddings.py  render_change_record.py  run_agents.py  run_demo.py  run_one_min_demo.sh  serve_public.sh
sim/: __init__.py  app.py  core.py  db.py  factory.py  incidents.py  loaders.py
tests/: conftest.py  test_a11y_tokens.py  test_adversarial.py  test_agents.py  test_analyzer.py  test_audit_coverage.py  test_change_record.py  test_collection_guard.py  test_console.py  test_console_gate.py  test_copy_lint.py  test_core_hardening.py  test_core_loop.py  test_extractor_robustness.py  test_fetch_rails.py  test_freshness_gating.py  test_funnel.py  test_gate_api.py  test_host_cold.py  test_invariants_guard.py  test_landing.py  test_live_commands.py  test_no_committed_secrets.py  test_pack.py  test_policy_kit.py  test_product_console.py  test_product_imports.py  test_rails_hardening.py  test_rails_wire.py  test_refactor_dom.py  test_scaffold_smoke.py  test_seat_demo.py  test_session_isolation.py  test_sim.py  test_sim_copy_hermetic.py  test_t1_integration.py  test_t1_orchestrator.py  test_venice.py  test_watcher_live_loop.py  test_wp_barrier.py  (+2 more)
(+156 files in other folders)
