[project]
name = "precedent"
version = "0.1.0"
description = "Precedent — an agent that retrieves and executes an organisation's own documented fixes with approval gates, audit and rollback."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# Runtime dependencies for the core loop, sim, console and memory package.
# NOTE (BasedAI hard rule): NO closed/proprietary model SDK appears here — all
# inference goes through the Venice OpenAI-compatible HTTP API via httpx, and the
# only file allowed to name a model is precedent/models.py.
dependencies = [
    "fastapi>=0.115",         # sim app + console (server-rendered + SSE)
    "uvicorn[standard]>=0.32", # ASGI server
    "pydantic>=2.9",          # message contracts (precedent/contracts.py)
    "httpx>=0.27",            # Venice / Jira / ASI:One clients
    "python-dotenv>=1.0",     # load .env locally
    "sse-starlette>=2.1",     # console trace streaming
    "jinja2>=3.1",            # Jinja2 (rendering) — WP-REFACTOR
    "pandas>=2.2",            # UCI ingest + bench
    "numpy>=1.26",            # bitmap / vector ops
    "pyyaml>=6.0",            # YAML policy pack (precedent/policy.py) + KB front-matter
]

[project.optional-dependencies]
# Fetch.ai rails. Kept as an extra only for install speed (heavier crypto deps).
# VERIFIED 3 Jul: uagents 0.25.2 + uagents-core 0.4.7 install cleanly on Python 3.13
# and `from uagents_core.contrib.protocols.chat import ...` works — the agents worktree
# does NOT need a separate 3.11/3.12 runtime.
agents = [
    "uagents>=0.20",
    "uagents-core>=0.1",
]
# Dev / CI.
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",   # test_concurrency uses async workers
    "ruff>=0.7",
]
# Dev-only browser end-to-end harness (tests/e2e). Kept as a SEPARATE extra so the default dev
# install stays slim and offline: `uv pip install -e ".[e2e]" && playwright install chromium`.
# When absent, the collection guard drops tests/e2e cleanly (bare checkout stays green, 0 skips).
# NOT a runtime/product dependency — the container image never installs it (tests/ is dockerignored).
e2e = [
    "playwright>=1.55",       # two-session isolation e2e + perceptual visual baseline
    "pillow>=10.0",           # downscale + perceptual-hash the design-system screenshots
]

# Local-first CLIs (no network). `precedent policy lint` = the policy authoring kit
# (WP-POLICY); `precedent-analyze <export.csv>` = the local analyzer (WP-ANALYZER,
# data never leaves the machine).
[project.scripts]
precedent = "precedent.cli.policy:main"
precedent-analyze = "precedent_analyzer.cli:main"

[tool.pytest.ini_options]
testpaths = ["precedent_memory/tests", "tests"]
asyncio_mode = "auto"
markers = [
    "browser: dev-only Playwright end-to-end tests (tests/e2e); dropped from collection when the browser stack is absent",
]

[tool.ruff]
line-length = 100
target-version = "py311"
# data/analysis holds one-off exploratory pandas scripts (committed as evidence);
# their idioms (e.g. `series == False` for elementwise masks) are intentional. `scratchpad`
# is the untracked throwaway working dir (never shipped, never in the CI checkout) — same
# rationale, so lint it out too and keep the local gate matching CI.
extend-exclude = ["data", ".venv", "scratchpad"]

[tool.ruff.lint]
# The open-weight guard: model-name tokens may appear ONLY in precedent/models.py.
# Enforced separately by scripts/check_open_weight.sh (grep), run in CI.
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# The console page is one server-rendered HTML template string; its long lines are
# verbatim on-screen markup/prose. All other rules still apply to both files.
"console/app.py" = ["E501"]
"console/showcase.py" = ["E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["precedent", "precedent_memory", "precedent_analyzer", "precedent_pack"]
